cmake_minimum_required(VERSION 3.11)
project(test)
#find_package(Boost REQUIRED COMPONENTS serialization)
#find_package(RTTR CONFIG REQUIRED Core)
#find_package(PCL REQUIRED)

#SET(CMAKE_BUILD_TYPE "Release")
#set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD 17)
include_directories(include)
#include_directories(${PCL_INCLUDE_DIRS})
#link_libraries(${Boost_LIBRARIES})
add_executable(test main.cpp)
#message("${Boost_LIBRARIES}")
target_link_libraries(test ${Boost_LIBRARIES} #[[RTTR::Core  dw]])
